# compiler

./: .gitignore  Assembler.h  CMakeLists.txt  Compiler.sln  Linker.h  System.lang  input.lang
Analysis/: Analysis.cpp  Analysis.h  AvailableExpressions.cpp  AvailableExpressions.h  Constants.cpp  DataFlow.h  DominatorTree.cpp  DominatorTree.h  FlowGraph.cpp  FlowGraph.h  InterferenceGraph.h  LiveVariables.h  ReachingDefs.cpp  UseDefs.cpp  UseDefs.h
Back/: AsmParser.cpp  AsmTokenizer.cpp  RegisterAllocator.cpp
Compiler/: Assembler.cpp  Assembler.h  BlockSort.cpp  BlockSort.h  Compiler.cpp  Compiler.h  Compiler.vcproj  Compiler.vcxproj  Compiler.vcxproj.filters  Dominance.cpp  Dominance.h  IR.cpp  IR.h  IREntry.cpp  IRGenerator.cpp  IRGenerator.h  IRProcedure.cpp  Interpreter.cpp  Interpreter.h  Linker.cpp  Linker.h  Main.cpp  OptPassConstant.cpp  OptPassConstant.h  OptPassCopy.cpp  OptPassCopy.h  OptPassDce.cpp  OptPassDce.h  OptPassIntoSSA.cpp  OptPassIntoSSA.h  OptPassJumps.cpp  OptPassJumps.h  Optimizer.cpp  Optimizer.h  ParseNode.h  ReachingDefs.cpp  ReachingDefs.h  SyntaxNode.cpp  SyntaxNode.h  Type.cpp  (+9 more)
Front/: EnvironmentGenerator.cpp  EnvironmentGenerator.h  HllTokenizer.cpp  HllTokenizer.h  IRGenerator.cpp  ProgramGenerator.cpp  ProgramGenerator.h  Scope.cpp  Scope.h  Symbol.h  Types.cpp  Types.h
IR/: Entry.cpp  Entry.h  EntryList.cpp  EntryList.h  Procedure.h  Program.cpp  Program.h
Input/: Tokenizer.cpp
Middle/: ErrorCheck.cpp  ErrorCheck.h  Optimizer.cpp  Optimizer.h
Transform/: CommonSubexpressionElimination.cpp  ConstantProp.cpp  ConstantProp.h  CopyProp.cpp  DeadCodeElimination.cpp  LiveRangeRenaming.cpp  LiveRangeRenaming.h  SSA.cpp  SSA.h  ThreadJumps.cpp  ThreadJumps.h  Transform.h
(+149 files in other folders)
